kubernetes/event-api-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: event-api-rest
  name: event-api-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: event-api-rest
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kubernetes-default: "true"
        io.kompose.service: event-api-rest
    spec:
      containers:
        - image: event-api-rest:dev
          name: event-api-rest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
