kubernetes/event-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: event-mysql
  name: event-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: event-mysql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kubernetes-default: "true"
        io.kompose.service: event-mysql
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: event-mysql:dev
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 10
            timeoutSeconds: 20
          name: event-mysql
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
          resources: {}
          securityContext:
            capabilities:
              add:
                - SYS_NICE
      restartPolicy: Always
status: {}
