kubernetes/event-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: event-server
  name: event-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: event-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kubernetes-default: "true"
        io.kompose.service: event-server
    spec:
      containers:
        - image: event-server:dev
          name: event-server
          imagePullPolicy: Never
          ports:
            - containerPort: 6000
          resources: {}
      restartPolicy: Always
status: {}
